--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -670,6 +670,9 @@ body {
   .contact--chat {
     padding: 50px 0;
     background: url("../img/contact-chat.jpg") no-repeat center/cover; }
+  .contact--star {
+    padding: 50px 0;
+    background: url("../img/contact-star.jpg") no-repeat center/cover; }
 
 .contact__title {
   margin: 0;
@@ -791,7 +794,7 @@ body {
     width: 300px; }
     .contact__input--select {
       width: 334px;
-      background: transparent url("../img/nav-arrow.svg") no-repeat 305px;
+      background: #fff url("../img/nav-arrow.svg") no-repeat 305px;
       background-size: 10px; }
     .contact__input--textarea {
       width: 95%;
@@ -837,7 +840,7 @@ body {
     .contact__input--select {
       width: 300px;
       height: 40px;
-      background: transparent url("../img/nav-arrow.svg") no-repeat 270px;
+      background: #fff url("../img/nav-arrow.svg") no-repeat 270px;
       background-size: 10px; }
     .contact__input--code {
       width: 36px; }
@@ -1684,6 +1687,8 @@ body {
   width: 370px;
   height: 270px;
   background: url("../img/mockup-1.png") no-repeat center/contain; }
+  .inner__mockup--2 {
+    background: url("../img/mockup-2.png") no-repeat center/contain; }
 
 .inner__column {
   width: 680px; }
@@ -1703,6 +1708,13 @@ body {
   .inner__desc h3 {
     margin: 70px 0 0 0;
     font-size: 60px; }
+
+.inner__price {
+  font-size: 24px;
+  font-weight: normal; }
+  .inner__price span {
+    font-size: 30px;
+    font-weight: 900; }
 
 @media screen and (max-width: 1200px) {
   .inner__name {
@@ -2099,4 +2111,127 @@ body {
   .comment__info {
     width: 150px; }
   .comment__button {
+    width: 270px; } }
+
+.included {
+  padding: 70px 0;
+  background: linear-gradient(-123deg, #f2f2f2 0%, #e0f7f9 52%, #cefbff 100%); }
+
+.included__name {
+  margin: 0;
+  font-size: 60px;
+  font-weight: 600; }
+
+.included__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 70px 0 0 0;
+  padding: 0;
+  list-style: none; }
+
+.included__item {
+  width: 370px; }
+  .included__item b {
+    display: block;
+    width: 300px;
+    margin: 0 0 0 auto;
+    font-size: 24px;
+    font-weight: 600; }
+  .included__item--1 {
+    background: url("../img/included-1.svg") no-repeat top left/50px; }
+  .included__item--2 {
+    background: url("../img/included-2.svg") no-repeat top left/50px; }
+  .included__item--3 {
+    background: url("../img/included-3.svg") no-repeat top left/50px; }
+  .included__item--4 {
+    background: url("../img/included-4.svg") no-repeat top left/50px; }
+  .included__item--5 {
+    background: url("../img/included-5.svg") no-repeat top left/50px; }
+  .included__item--6 {
+    background: url("../img/included-6.svg") no-repeat top left/50px; }
+
+@media screen and (max-width: 1200px) {
+  .included__list {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .included__item {
+    margin: auto; } }
+
+@media screen and (max-width: 768px) {
+  .included {
+    padding: 50px 0; }
+  .included__name {
+    font-size: 30px;
+    text-align: center; }
+  .included__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+    .included__list:last-child {
+      margin: 0; }
+  .included__item {
+    width: auto;
+    margin: 0 0 50px 0;
+    padding: 70px 0 0 0; }
+    .included__item b {
+      width: auto;
+      text-align: center; }
+    .included__item--1 {
+      background: url("../img/included-1.svg") no-repeat top/50px; }
+    .included__item--2 {
+      background: url("../img/included-2.svg") no-repeat top/50px; }
+    .included__item--3 {
+      background: url("../img/included-3.svg") no-repeat top/50px; }
+    .included__item--4 {
+      background: url("../img/included-4.svg") no-repeat top/50px; }
+    .included__item--5 {
+      background: url("../img/included-5.svg") no-repeat top/50px; }
+    .included__item--6 {
+      background: url("../img/included-6.svg") no-repeat top/50px; }
+    .included__item:last-child {
+      margin: 0; } }
+
+.topics {
+  padding: 70px 0; }
+
+.topics__name {
+  margin: 0;
+  font-size: 60px;
+  font-weight: 600; }
+
+.topics__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 50px 0; }
+
+.topics__list {
+  padding: 0;
+  font-size: 18px;
+  font-weight: normal;
+  list-style: inside url("../img/topics-bullet.svg"); }
+
+.topics__button {
+  margin: auto; }
+
+@media screen and (max-width: 768px) {
+  .topics {
+    padding: 50px 0; }
+  .topics__name {
+    font-size: 30px;
+    text-align: center; }
+  .topics__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .topics__button {
     width: 270px; } }
