--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -226,6 +226,18 @@ body {
   clip: auto;
   opacity: 1; }
 
+.nav__select {
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  border-bottom: 1px dotted #000;
+  border-radius: 0;
+  background: #fff;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer; }
+
 @media screen and (max-width: 1200px) {
   .nav {
     width: 550px; } }
