--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -623,10 +623,10 @@ body {
     margin: 0 30px 0 0; }
 
 .live__mockup {
-  width: 342px;
-  height: 272px;
+  width: 400px;
+  height: 400px;
   background: url("../img/live-mockup.png") no-repeat center;
-  background-size: cover; }
+  background-size: contain; }
 
 @media screen and (max-width: 1200px) {
   .live__box {
