--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -1821,7 +1821,7 @@ body {
 
 .scope__img {
   height: 600px;
-  background: url("../img/scope-bg.png") no-repeat top center; }
+  background: url("../img/mockup-1.png") no-repeat top center; }
 
 .scope__flex {
   display: -webkit-box;
