--- a/investix/sass/blocks/scope.scss
+++ b/investix/sass/blocks/scope.scss
@@ -14,7 +14,7 @@
 
 .scope__img {
   height: 600px;
-  background: url('../img/scope-bg.png') no-repeat top center;
+  background: url('../img/mockup-1.png') no-repeat top center;
 }
 
 .scope__flex {
