--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -1860,7 +1860,9 @@ body {
     left: 130px;
     width: 200px;
     height: 1px;
-    border-top: 1px solid #fff; }
+    border-top: 1px solid #fff;
+    -webkit-box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3);
+    box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3); }
   .scope__box--right::before {
     content: '';
     position: absolute;
@@ -1869,7 +1871,9 @@ body {
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background: #fff; }
+    background: #fff;
+    -webkit-box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3);
+    box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3); }
 
 .scope__box--left {
   position: relative; }
@@ -1880,7 +1884,9 @@ body {
     right: 130px;
     width: 200px;
     height: 1px;
-    border-top: 1px solid #fff; }
+    border-top: 1px solid #fff;
+    -webkit-box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3);
+    box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3); }
   .scope__box--left::before {
     content: '';
     position: absolute;
@@ -1889,7 +1895,9 @@ body {
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background: #fff; }
+    background: #fff;
+    -webkit-box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3);
+    box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3); }
 
 @media screen and (max-width: 1200px) {
   .scope {
