--- a/investix/sass/blocks/scope.scss
+++ b/investix/sass/blocks/scope.scss
@@ -58,6 +58,7 @@
     width: 200px;
     height: 1px;
     border-top: 1px solid #fff;
+    box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3);
   }
   
   &::before {
@@ -69,6 +70,7 @@
     height: 15px;
     border-radius: 50%;
     background: #fff;
+    box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3);
   }
 }
 
@@ -83,6 +85,7 @@
     width: 200px;
     height: 1px;
     border-top: 1px solid #fff;
+    box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3);
   }
   
   &::before {
@@ -94,6 +97,7 @@
     height: 15px;
     border-radius: 50%;
     background: #fff;
+    box-shadow: 2px 0 5px 0 rgba(18, 24, 61, 0.3);
   }
 }
 
