--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -677,7 +677,8 @@ body {
   width: 100%; }
 
 .start {
-  padding: 50px 0 70px 0; }
+  padding: 50px 0 70px 0;
+  border-top: 1px solid #ccc; }
   .start h1, .start h2 {
     font-size: 40px;
     font-family: 'SF UI Display Black', sans-serif;
