--- a/investix/sass/blocks/account-programs.scss
+++ b/investix/sass/blocks/account-programs.scss
@@ -122,11 +122,11 @@
   }
   
   &--ultimate {
-    background: linear-gradient( -123deg, rgb(136,80,198) 0%, rgb(191,163,222) 58%, rgb(245,245,245) 100%);
+    background: linear-gradient( -123deg, rgb(240, 227, 255) 0%, rgb(245,245,245) 100%);
   }
   
   &--crypto {
-    background: linear-gradient( -123deg, rgb(240,189,122) 0%, rgb(229,227,217) 54%, rgb(245,245,245) 100%);
+    background: linear-gradient( -123deg, rgb(255, 229, 196) 0%, rgb(245,245,245) 100%);
   }
 }
 
