--- a/investix/sass/global/base.scss
+++ b/investix/sass/global/base.scss
@@ -5,15 +5,16 @@ body {
 }
 
 .container {
-  width: 1170px;
+  width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 @media screen and ($tablet-widths) {
   .container {
-    width: 95%;
-    padding: 0;
+    width: 100%;
+    
   }
 }
 
