--- a/aur/source/sass/blocks/header.scss
+++ b/aur/source/sass/blocks/header.scss
@@ -33,12 +33,40 @@
   &--prev {
     margin: 0 15px 0 0;
     background: transparent url('../img/control.svg') no-repeat center;
+    
+    &:hover {
+      animation: left 0.3s infinite alternate;
+    }
   }
   
   &--next {
     margin: 0 0 0 15px;
     background: transparent url('../img/control.svg') no-repeat center;
     transform: rotate(180deg);
+    
+    &:hover {
+      animation: right 0.3s infinite alternate;
+    }
+  }
+}
+
+@keyframes left {
+  0% {
+    
+  }
+  
+  100% {
+    transform: translateX(-10px);
+  }
+}
+
+@keyframes right {
+  0% {
+    
+  }
+  
+  100% {
+    transform: rotate(180deg) translateX(-10px);
   }
 }
 
@@ -49,7 +77,7 @@
   font-weight: 500;
   text-decoration: none;
   text-transform: uppercase;
-  background: url('../img/pdf.svg') no-repeat left top;
+  background: url('../img/pdf.svg') no-repeat left top / 21px;
 }  
 
 .header__theme {
@@ -71,6 +99,7 @@
   padding: 0;
   border: 1px solid #46484d;
   cursor: pointer;
+  transition: 0.3s;
   
   &--light {
     background: transparent url('../img/light.svg') no-repeat center;
@@ -81,6 +110,10 @@
   }
   
   &--active {
+    border: 1px solid #fff;
+  }
+  
+  &:hover {
     border: 1px solid #fff;
   }
 }
