--- a/aur/source/sass/blocks/nav.scss
+++ b/aur/source/sass/blocks/nav.scss
@@ -1,4 +1,6 @@
 .nav {
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: column;
   height: 88.5vh;
@@ -26,6 +28,11 @@
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 2px;
+    transition: 0.2s;
+    
+    &:hover {
+      color: rgba(182, 192, 212, 0.3);
+    }
   }
   
   &--logo {
