--- a/xm/sass/style.scss
+++ b/xm/sass/style.scss
@@ -1,19 +1,10 @@
-@import 'variables';
-
+@import 'global/variables';
 @import 'global/base';
-@import 'global/font';
+@import 'global/fonts';
 
-@import 'blocks/header';
 @import 'blocks/title';
-@import 'blocks/info';
-@import 'blocks/traders';
-@import 'blocks/exchange';
-@import 'blocks/business';
-@import 'blocks/contact';
-@import 'blocks/media';
-@import 'blocks/footer';
-
-@import 'blocks/choose';
-@import 'blocks/amount';
-@import 'blocks/register';
+@import 'blocks/nav';
+@import 'blocks/button';
+@import 'blocks/edge';
+@import 'blocks/online';
 @import 'blocks/form';
