--- a/xm/sass/blocks/online.scss
+++ b/xm/sass/blocks/online.scss
@@ -11,7 +11,7 @@
   }
   
   &:last-of-type {
-    background: #ccc;
+    background: url('../img/online-bg.jpg') no-repeat center / cover;
   }
 }
 
@@ -48,6 +48,51 @@
     color: $text;
     font-size: 14px;
     font-weight: normal;
+  }
+  
+  &--1 {
+    position: relative;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      right: -35px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.7) url('../img/online-1.svg') no-repeat center / 40px;
+    }
+  }
+  
+  &--2 {
+    position: relative;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      right: -35px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.7) url('../img/online-2.svg') no-repeat center / 40px;
+    }
+  }
+  
+  &--3 {
+    position: relative;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      right: -35px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.7) url('../img/online-3.svg') no-repeat center / 40px;
+    }
   }
   
   &:last-child {
