--- a/xm/css/style.css
+++ b/xm/css/style.css
@@ -137,9 +137,18 @@ body {
   color: #f4f5f9;
   font-size: 14px;
   font-weight: normal;
-  text-decoration: none; }
-  .nav__item a:first-child {
-    padding: 40px 25px 40px 0; }
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  outline: none; }
+  .nav__item a:hover, .nav__item a:focus {
+    border-bottom: 1px solid #ab1419; }
+
+.nav__item:nth-child(1) a {
+  padding: 40px 25px 40px 0; }
+  .nav__item:nth-child(1) a:hover {
+    border: none; }
 
 .nav__item:nth-child(2) {
   margin: 0 0 0 auto; }
@@ -163,8 +172,15 @@ body {
     width: 225px; }
   .button--medium {
     width: 270px; }
+  .button--big {
+    width: 370px; }
   .button--transparent {
-    border: 1px solid #fff; }
+    border: 1px solid #fff;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+    outline: none; }
+    .button--transparent:hover, .button--transparent:focus {
+      border: 1px solid #ab1419; }
   .button--red {
     background: #ab1419;
     border: none; }
@@ -217,7 +233,7 @@ body {
   .online__column:first-of-type {
     background: #0b0d17; }
   .online__column:last-of-type {
-    background: #ccc; }
+    background: url("../img/online-bg.jpg") no-repeat center/cover; }
 
 .online__info {
   width: 585px;
@@ -246,6 +262,39 @@ body {
     color: #f4f5f9;
     font-size: 14px;
     font-weight: normal; }
+  .online__item--1 {
+    position: relative; }
+    .online__item--1::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      right: -35px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.7) url("../img/online-1.svg") no-repeat center/40px; }
+  .online__item--2 {
+    position: relative; }
+    .online__item--2::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      right: -35px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.7) url("../img/online-2.svg") no-repeat center/40px; }
+  .online__item--3 {
+    position: relative; }
+    .online__item--3::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      right: -35px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.7) url("../img/online-3.svg") no-repeat center/40px; }
   .online__item:last-child {
     margin: 0; }
 
@@ -275,7 +324,10 @@ body {
   font-weight: normal;
   border: 1px solid #fff;
   border-radius: 5px;
-  background: transparent; }
+  background: transparent;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  outline: none; }
   .form__input::-webkit-input-placeholder {
     color: #f4f5f9; }
   .form__input:-ms-input-placeholder {
@@ -284,6 +336,8 @@ body {
     color: #f4f5f9; }
   .form__input::placeholder {
     color: #f4f5f9; }
+  .form__input:focus {
+    border: 1px solid #ab1419; }
 
 .form__textarea {
   margin: 0 0 20px 0;
@@ -294,6 +348,9 @@ body {
   border: 1px solid #fff;
   border-radius: 5px;
   background: transparent;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  outline: none;
   resize: none; }
   .form__textarea::-webkit-input-placeholder {
     color: #f4f5f9; }
@@ -303,3 +360,113 @@ body {
     color: #f4f5f9; }
   .form__textarea::placeholder {
     color: #f4f5f9; }
+  .form__textarea:focus {
+    border: 1px solid #ab1419; }
+
+.web {
+  padding: 80px 0; }
+
+.web__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.web__mockup {
+  width: 570px;
+  height: 618px;
+  background: url("../img/web-mockup.png") no-repeat center/cover; }
+
+.web__info {
+  width: 570px; }
+
+.web__name {
+  margin: 0 0 20px 0;
+  font-size: 36px;
+  font-weight: 300; }
+  .web__name span {
+    font-weight: 700; }
+
+.web__text {
+  font-size: 14px;
+  font-weight: normal; }
+
+.web__list {
+  margin: 14px 0 30px 0;
+  font-size: 14px;
+  font-weight: normal;
+  list-style: url("../img/bullet.svg");
+  line-height: 25px; }
+
+.web__button {
+  margin: auto; }
+
+.footer {
+  padding: 20px 0;
+  background: #0b0d17; }
+
+.footer__logo {
+  display: block;
+  width: 170px;
+  margin: auto; }
+
+.footer__hr {
+  height: 1px;
+  margin: 15px 0 40px 0;
+  border: none;
+  background: #ab1419; }
+
+.footer__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 0 0 40px 0; }
+
+.footer__info {
+  width: 770px; }
+
+.footer__text {
+  color: #f4f5f9;
+  font-size: 14px;
+  font-weight: 300; }
+  .footer__text:first-of-type {
+    margin: 0 0 14px 0; }
+  .footer__text:last-of-type {
+    margin: 14px 0 0 0; }
+
+.footer__social {
+  padding: 30px 0;
+  background: #000; }
+
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.footer__item {
+  font-size: 0; }
+  .footer__item--fb {
+    display: block;
+    width: 8px;
+    height: 14px;
+    background: url("../img/facebook.svg") no-repeat center/cover; }
