--- a/xm/sass/blocks/form.scss
+++ b/xm/sass/blocks/form.scss
@@ -22,9 +22,15 @@
   border: 1px solid #fff;
   border-radius: 5px;
   background: transparent;
+  transition: 0.2s;
+  outline: none;
   
   &::placeholder {
     color: $text;
+  }
+  
+  &:focus {
+    border: 1px solid $title;
   }
 }
 
@@ -37,9 +43,15 @@
   border: 1px solid #fff;
   border-radius: 5px;
   background: transparent;
+  transition: 0.2s;
+  outline: none;
   resize: none;
   
   &::placeholder {
     color: $text;
+  }
+  
+  &:focus {
+    border: 1px solid $title;
   }
 }
