--- a/xm/css/style.css
+++ b/xm/css/style.css
@@ -407,7 +407,7 @@ body {
   margin: auto; }
 
 .footer {
-  padding: 20px 0;
+  padding: 20px 0 0 0;
   background: #0b0d17; }
 
 .footer__logo {
@@ -432,6 +432,8 @@ body {
   -ms-flex-pack: justify;
   justify-content: space-between;
   margin: 0 0 40px 0; }
+  .footer__flex--social {
+    margin: 0; }
 
 .footer__info {
   width: 770px; }
@@ -459,6 +461,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  width: 370px;
   margin: 0;
   padding: 0;
   list-style: none; }
@@ -470,3 +473,24 @@ body {
     width: 8px;
     height: 14px;
     background: url("../img/facebook.svg") no-repeat center/cover; }
+  .footer__item--gp {
+    display: block;
+    width: 21px;
+    height: 14px;
+    background: url("../img/google-plus.svg") no-repeat center/cover; }
+  .footer__item--tw {
+    display: block;
+    width: 17px;
+    height: 14px;
+    background: url("../img/twitter.svg") no-repeat center/cover; }
+  .footer__item--em {
+    display: block;
+    width: 17px;
+    height: 14px;
+    background: url("../img/email.svg") no-repeat center/cover; }
+
+.footer__copyright {
+  margin: 0;
+  color: #f4f5f9;
+  font-size: 14px;
+  font-weight: 300; }
