--- a/xm/sass/blocks/edge.scss
+++ b/xm/sass/blocks/edge.scss
@@ -47,3 +47,14 @@
     background: url('../img/edge-4.svg') no-repeat top / 90px;
   }
 }
+
+@media screen and ($tablet-widths) {
+  .edge__flex {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  
+}
