--- a/xm/sass/blocks/footer.scss
+++ b/xm/sass/blocks/footer.scss
@@ -98,3 +98,22 @@
   font-size: 14px;
   font-weight: 300;
 }
+
+@media screen and ($tablet-widths) {
+  .footer__flex {
+    flex-direction: column;
+  }
+  
+  .footer__info {
+    width: auto;
+    margin: 40px 0 0 0;
+  }
+  
+  .footer__copyright {
+    margin: 30px 0 0 0;
+  }
+}
+
+@media screen and ($mobile-widths) {
+
+}
