--- a/xm/sass/blocks/title.scss
+++ b/xm/sass/blocks/title.scss
@@ -42,3 +42,17 @@
   padding: 0;
   list-style: none;
 }
+
+@media screen and ($tablet-widths) {
+  .title__subname {
+    margin: 80px 0 15px 0;
+  }
+  
+  .title__name {
+    font-size: 45px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  
+}
