--- a/xm/sass/blocks/web.scss
+++ b/xm/sass/blocks/web.scss
@@ -11,7 +11,7 @@
 .web__mockup {
   width: 570px;
   height: 618px;
-  background: url('../img/web-mockup.png') no-repeat center / cover;
+  background: url('../img/web-mockup.png') no-repeat center / contain;
 }
 
 .web__info {
@@ -43,4 +43,19 @@
 
 .web__button {
   margin: auto;
+}
+
+@media screen and ($tablet-widths) {
+  .web__flex {
+    flex-direction: column;
+  }
+  
+  .web__mockup {
+    height: 500px;
+    margin: 0 0 30px 0;
+  }
+}
+
+@media screen and ($mobile-widths) {
+
 }
