--- a/xm/sass/global/base.scss
+++ b/xm/sass/global/base.scss
@@ -28,4 +28,8 @@ body {
   }
 }
 
-@media screen and ($mobile-widths) {}
+@media screen and ($mobile-widths) {
+  .container {
+    background: aqua;
+  }
+}
