--- a/xm/sass/global/base.scss
+++ b/xm/sass/global/base.scss
@@ -28,8 +28,4 @@ body {
   }
 }
 
-@media screen and ($mobile-widths) {
-  .container {
-    background: aqua;
-  }
-}
+@media screen and ($mobile-widths) {}
