--- a/xm/css/style.css
+++ b/xm/css/style.css
@@ -24,10 +24,6 @@ body {
   .container {
     width: 100%; } }
 
-@media screen and (max-width: 768px) {
-  .container {
-    background: aqua; } }
-
 @font-face {
   font-family: 'SF UI Display';
   src: local("SF UI Display Thin"), local("SFUIDisplay-Thin"), url("../fonts/SFUIDisplay-Thin.woff2") format("woff2");
@@ -131,6 +127,27 @@ body {
   .title__name {
     font-size: 45px; } }
 
+@media screen and (max-width: 768px) {
+  .title {
+    padding: 0 0 100px 0; }
+  .title__subname {
+    font-size: 25px; }
+  .title__hr {
+    width: auto; }
+  .title__name {
+    font-size: 30px; }
+  .title__button {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: auto; }
+    .title__button li:first-child {
+      margin: 0 0 10px 0; } }
+
 .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -166,6 +183,19 @@ body {
 .nav__logo {
   display: block;
   width: 190px; }
+
+@media screen and (max-width: 768px) {
+  .nav__item a {
+    padding: 30px 15px 15px 15px;
+    color: #f4f5f9;
+    font-size: 14px;
+    font-weight: normal;
+    text-decoration: none;
+    border-bottom: 1px solid transparent; }
+  .nav__item:nth-child(1) a {
+    padding: 30px 0 25px 0; }
+  .nav__logo {
+    width: 150px; } }
 
 .button {
   display: block;
@@ -238,6 +268,24 @@ body {
     flex-wrap: wrap;
     -ms-flex-pack: distribute;
     justify-content: space-around; } }
+
+@media screen and (max-width: 768px) {
+  .edge {
+    padding: 50px 0; }
+  .edge__flex {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap; }
+  .edge__box {
+    margin: 0 0 30px 0; }
+    .edge__box:last-child {
+      margin: 0; } }
 
 .online {
   display: -webkit-box;
@@ -332,6 +380,20 @@ body {
   .online__item--3::after {
     right: 0px; } }
 
+@media screen and (max-width: 768px) {
+  .online__column {
+    padding: 50px 0; }
+  .online__info {
+    width: auto;
+    padding: 0 15px; }
+  .online__name {
+    font-size: 30px;
+    text-align: center; }
+  .online__list {
+    text-align: center; }
+  .online__item--1::after, .online__item--2::after, .online__item--3::after {
+    display: none; } }
+
 .form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -397,6 +459,10 @@ body {
   .form__textarea:focus {
     border: 1px solid #ab1419; }
 
+@media screen and (max-width: 768px) {
+  .form__name {
+    font-size: 30px; } }
+
 .web {
   padding: 80px 0; }
 
@@ -449,6 +515,18 @@ body {
   .web__mockup {
     height: 500px;
     margin: 0 0 30px 0; } }
+
+@media screen and (max-width: 768px) {
+  .web {
+    padding: 50px 0; }
+  .web__mockup {
+    width: 300px;
+    height: 300px; }
+  .web__info {
+    width: auto; }
+  .web__name {
+    font-size: 30px;
+    text-align: center; } }
 
 .footer {
   padding: 20px 0 0 0;
@@ -550,3 +628,9 @@ body {
     margin: 40px 0 0 0; }
   .footer__copyright {
     margin: 30px 0 0 0; } }
+
+@media screen and (max-width: 768px) {
+  .footer__button {
+    width: 270px; }
+  .footer__list {
+    width: 100%; } }
