--- a/xm/sass/blocks/nav.scss
+++ b/xm/sass/blocks/nav.scss
@@ -44,3 +44,30 @@
   display: block;
   width: 190px;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .nav__item {
+    
+    a {
+      padding: 30px 15px 15px 15px;
+      color: #f4f5f9;
+      font-size: 14px;
+      font-weight: normal;
+      text-decoration: none;
+      border-bottom: 1px solid transparent;
+    }
+    
+    &:nth-child(1) {
+      
+      a {
+        padding: 30px 0 25px 0;
+      }
+    }
+  }
+  
+  .nav__logo {
+    width: 150px;
+  }
+}
