--- a/xm/sass/blocks/title.scss
+++ b/xm/sass/blocks/title.scss
@@ -54,5 +54,32 @@
 }
 
 @media screen and ($mobile-widths) {
+  .title {
+    padding: 0 0 100px 0;
+  }
   
+  .title__subname {
+    font-size: 25px;
+  }
+  
+  .title__hr {
+    width: auto;
+  }
+  
+  .title__name {
+    font-size: 30px;
+  }
+  
+  .title__button {
+    align-items: center;
+    flex-direction: column;
+    width: auto;
+    
+    li {
+      
+      &:first-child {
+        margin: 0 0 10px 0;
+      }
+    }
+  }
 }
