--- a/investix/sass/blocks/table.scss
+++ b/investix/sass/blocks/table.scss
@@ -11,10 +11,10 @@
 
 .table__main {
   width: 100%;
-  // border-collapse: collapse;
+  margin: 0 0 60px 0;
   
   th {
-    width: 145px;
+    width: 140px;
     padding: 0;
     text-align: left;
   }
@@ -94,6 +94,147 @@
   
   &--black {
     color: #000;
-    background: #000;
+    background: #000000;
+  }
+}
+
+.table__row {
+  
+  td {
+    padding: 15px 10px;
+    font-size: 14px;
+    font-weight: normal;
+    
+    b {
+      font-size: 20px;
+      font-weight: 700;
+    }
+    
+    p {
+      margin: 0;
+      font-size: 13px;
+      font-weight: 400;
+    }
+    
+    &:nth-child(1) {
+      width: 210px;
+      background: #ebebeb;
+    }
+    
+    &:nth-child(2) {
+      color: #fff;
+      font-weight: 400;
+      background: #66c178;
+    }
+    
+    &:nth-child(3) {
+      color: #fff;
+      font-weight: 400;
+      background: #ffa453;
+    }
+    
+    &:nth-child(4) {
+      color: #fff;
+      font-weight: 400;
+      background: #1d8af3;
+    }
+    
+    &:nth-child(5) {
+      color: #fff;
+      font-weight: 400;
+      background: #f4ce34;
+    }
+    
+    &:nth-child(6) {
+      color: #fff;
+      font-weight: 400;
+      background: #8731e8;
+    }
+    
+    &:nth-child(7) {
+      color: #fff;
+      background: #000000;
+      
+      b {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+.table__check {
+  
+  img {
+    display: block;
+    width: 20px;
+    height: 16px;
+    margin: auto;
+  }
+}
+
+.table__button {
+  display: block;
+  margin: 10px 0 0 0;
+  padding: 10px 0;
+  color: #fff;
+  font-size: 12px;
+  font-weight: normal;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 4px;
+  background: #3d964e;
+}
+
+.table__why {
+  padding: 45px 0;
+  background: #fafafa;
+  
+  h1 {
+    margin: 0;
+    font-size: 30px;
+    font-weight: 600;
+  }
+  
+  p {
+    font-weight: normal;
+  }
+  
+  b {
+    font-weight: 700;
+  }
+}
+
+.table__how {
+  padding: 60px 0;
+  
+  h1 {
+    margin: 0;
+    font-size: 30px;
+    font-weight: 600;
+  }
+  
+  p {
+    font-weight: normal;
+    
+    a {
+      color: #0060ff;
+      font-weight: 700;
+      text-decoration: none;
+      border-bottom: 1px solid #0060ff;
+    }
+  }
+}
+
+@media screen and ($tablet-widths) {
+  .table__main {
+    display: block;
+    overflow: scroll;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .table__name {
+    font-size: 20px;
+    text-align: center;
   }
 }
