--- a/investix/sass/blocks/header.scss
+++ b/investix/sass/blocks/header.scss
@@ -22,8 +22,13 @@
 }
 
 @media screen and ($tablet-widths) {
+  .header__flex {
+    flex-direction: column;
+  }
+  
   .header__logo {
     width: 130px;
+    margin: 0 0 30px 0;
   }
   
   .header__button {
@@ -34,6 +39,11 @@
 @media screen and ($mobile-widths) {
   .header__flex {
     position: relative;
+    flex-direction: row;
+  }
+  
+  .header__logo {
+    margin: 0;
   }
   
   .header__toggle {
