--- a/investix/sass/blocks/nav.scss
+++ b/investix/sass/blocks/nav.scss
@@ -1,9 +1,10 @@
 .nav {
-  width: 670px;
+  width: 770px;
 }
 
 .nav__list {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin: 0;
   padding: 0;
@@ -95,7 +96,7 @@
 
 @media screen and ($tablet-widths) {
   .nav {
-    width: 550px;
+    width: 100%;
   }
 }
 
@@ -131,6 +132,11 @@
         top: 22px;
         right: -7px;
       }
+    }
+    
+    select {
+      padding: 10px 0;
+      border: 0;
     }
   }
   
