--- a/investix/sass/blocks/nav.scss
+++ b/investix/sass/blocks/nav.scss
@@ -104,7 +104,6 @@
   .nav {
     position: absolute;
     top: 57px;
-    width: 100%;
     border-top: 1px solid #0060ff;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -121,6 +120,7 @@
   }
   
   .nav__list {
+    align-items: stretch;
     flex-direction: column;
     text-align: center;
     
