--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -854,6 +854,15 @@ body {
     background: url("../img/bank-h.svg") no-repeat center;
     background-size: 117px, 43px; }
 
+.payment__box--vload {
+  width: 117px;
+  height: 43px;
+  background: url("../img/vload.svg") no-repeat center;
+  background-size: 117px, 43px; }
+  .payment__box--vload:hover {
+    background: url("../img/vload-h.svg") no-repeat center;
+    background-size: 117px, 43px; }
+
 @media screen and (max-width: 768px) {
   .payment {
     padding-bottom: 0; }
