--- a/mm/sass/blocks/payment.scss
+++ b/mm/sass/blocks/payment.scss
@@ -125,6 +125,18 @@
   }
 }
 
+.payment__box--vload {
+  width: 117px;
+  height: 43px;
+  background: url('../img/vload.svg') no-repeat center;
+  background-size: 117px, 43px;
+  
+  &:hover {
+    background: url('../img/vload-h.svg') no-repeat center;
+    background-size: 117px, 43px;
+  }
+}
+
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
