--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -278,6 +278,19 @@ body {
   -ms-flex-align: center;
   align-items: center; }
 
+.main-nav__select {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 700;
+  border: 0;
+  border-bottom: 1px solid #fff;
+  border-radius: 0;
+  background: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer; }
+
 @media screen and (max-width: 768px) {
   .main-nav {
     -webkit-box-orient: vertical;
