--- a/mm/sass/blocks/main-nav.scss
+++ b/mm/sass/blocks/main-nav.scss
@@ -5,6 +5,18 @@
   // height: 90px;
 }
 
+.main-nav__select {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 700;
+  border: 0;
+  border-bottom: 1px solid #fff;
+  border-radius: 0;
+  background: transparent;
+  appearance: none; 
+  cursor: pointer;
+}
+
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
